[package]
name = "railway"
repository = "https://github.com/nebulatgs/cli-rs/"
description = "Develop and deploy code with zero configuration"
license = "MIT"
version = "0.1.3-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { git = "https://github.com/clap-rs/clap", features = ["derive", "suggestions"] }
ignore = "0.4.18"
tar = "0.4.37"
open = "2.0.1"
hostname = "0.3.1"
tokio = { version = "1.14.0", features = ["full"] }
indicatif = "0.16.2"
dialoguer = {version = "0.9.0", features = ["fuzzy-select"]}
gzp = "0.9.2"
reqwest = { version = "0.11.6", features = ["multipart", "stream"] }
synchronized-writer = "1.1.10"
futures = "0.3.17"
graphql_client = {version = "0.10.0", features = ["reqwest"]}
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.71"
dirs = "4.0.0"
base64 = "0.13.0"
colored = "2"
chrono = {version = "0.4.19", features = ["serde"]}

[profile.release]
lto = true
