[package]
name = "railway"
repository = "https://github.com/nebulatgs/cli-rs/"
description = "Develop and deploy code with zero configuration"
license = "MIT"
version = "0.3.1-alpha"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace = "0.3.63"
base64 = "0.13.0"
chrono = { version = "0.4.19", features = ["serde"] }
clap = { git = "https://github.com/clap-rs/clap", features = ["derive", "suggestions"] }
colored = "2"
dialoguer = { version = "0.9.0", features = ["fuzzy-select"] }
dirs = "4.0.0"
graphql_client = { version = "0.10.0" }
gzp = { version = "0.9.2" }
hostname = "0.3.1"
ignore = "0.4.18"
indicatif = "0.16.2"
open = "2.0.1"
reqwest = { version = "0.11.6", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.71"
synchronized-writer = "1.1.10"
tar = "0.4.37"
tokio = { version = "1.14.0", features = ["full"] }

[profile.release]
lto = true
